syntax = "proto3";
package api;
option go_package = "./api;api";

import "google/api/annotations.proto";

message Todo {
  string     id      = 1;
  string     content = 2;
  TodoStatus status  = 3;
}

enum TodoStatus {
  TODO_STATUS_TODO  = 0;
  TODO_STATUS_DOING = 1;
  TODO_STATUS_DONE  = 2;
}

message GetTodoRequest {
  string id = 1;
}

message GetTodoResponse {
  Todo todo = 1;
}

message ListTodosRequest {}

message ListTodosResponse {
  repeated Todo todos = 1;
}

message CreateTodoRequest {
  string content = 1;
}

message CreateTodoResponse {
  Todo todo = 1;
}

message UpdateTodoRequest {
  string     id      = 1;
  string     content = 2;
  TodoStatus status  = 3;
}

message UpdateTodoResponse {
  Todo todo = 1;
}

message DeleteTodoRequest {
  string id = 1;
}

message DeleteTodoResponse {}

service TodoService {
  rpc Get(GetTodoRequest) returns (GetTodoResponse) {
    option (google.api.http) = {
      get: "/todos/{id}"
    };
  }

  rpc List(ListTodosRequest) returns (ListTodosResponse) {
    option (google.api.http) = {
      get: "/todos"
    };
  }

  rpc Create(CreateTodoRequest) returns (CreateTodoResponse) {
    option (google.api.http) = {
      post: "/todos"
      body: "*"
    };
  }

  rpc Update(UpdateTodoRequest) returns (UpdateTodoResponse) {
    option (google.api.http) = {
      put: "/todos/{id}"
      body: "*"
    };
  }

  rpc Delete(DeleteTodoRequest) returns (DeleteTodoResponse) {
    option (google.api.http) = {
      delete: "/todos/{id}"
    };
  }
}
